# Hop_yhuan939

./: .gitignore  API  API.cpp  API.h  CMakeLists.txt  Database.cpp  Database.h  Doxyfile  Item.cpp  Item.h  README.md  Router.cpp  Router.h  Voice.cpp  Voice.h  VoiceAPI.cpp  VoiceAPI.h  Webserver.cpp  Whisper.cpp  Whisper.h  main.cpp  router.cpp  router.h
html/: API_8cpp.html  API_8cpp__incl.dot  Database_8cpp.html  Database_8cpp__incl.dot  Router_8cpp.html  Router_8h_source.html  VoiceAPI_8h_source.html  Voice_8cpp.html  Voice_8cpp__incl.dot  Voice_8h_source.html  annotated.html  classAPI-members.html  classAPI.html  classRouter-members.html  classRouter.html  classVoiceAPI-members.html  classVoiceAPI.html  classes.html  globals.html  globals_func.html  structItem-members.html  structItem.html
html/search/: all_1.js  all_4.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  pages_0.js  searchdata.js
latex/: API_8cpp.tex  Database_8cpp.tex  Router_8cpp.tex  Router_8cpp__incl.dot  Webserver_8cpp__incl.dot  refman.tex
public/: index.html
static/css/: dash.css  style.css
static/js/: history.js  message.js  pjax.js  script.js  swiper.js  voice.js
templates/: dash.html  index.html  product.html  search.html
tools/: get_multipart_file.hpp
utils/: crow.service  items.sql
(+47 files in other folders)
